# state_prep_benchmark

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml  test.py
data/compound_data/: output_123329.json  output_139073.json  output_157350.json  output_5460607.json
scripts/: data_for_pubchem.py  stats_for_optimal_mcx.py
src/: state_prep_algorithms.py  utils.py
state_preparation/: algorithms.py  benchmarking.py  circuit_converter.py  isometry.py  results.py  runner.py  state_prep_algorithms.py  state_samplers.py  statevector.py  utils.py
state_preparation/benchmark/: __init__.py  abstract.py  dicke_util.py  lcu_prep_states.py  states.py  utils.py
state_preparation/benchmark/compound_data/: output_123164.json  output_139760.json  output_16211014.json  output_62714.json  output_6397184.json  output_962.json
state_preparation/gates/: utils.py
state_preparation/gates/mcp/: types.py
state_preparation/gates/mcx/: increments.py  mcx_gates.py  types.py
state_preparation/householder/: types.py
state_preparation/mcx/: increments.py  mcx_gates.py
state_preparation/permutation/: types.py
test/: conftest.py  test_algorithms.py  test_benchmark_states.py  test_householder.py  test_isometry.py  test_lcu_prep_states.py  test_low_rank_state_prep.py  test_mcp.py  test_mcx.py  test_permutations.py  test_runner.py  test_state_samplings.py  test_utils.py
