[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "state_prep_benchmark"
version = "0.0.1"
dependencies = [
  "cirq",
  "prettytable",
  "fire",
  "qiskit",
  "qiskit_aer",
  "ply",
  "qiskit_aer",
  "black",
  "isort",
  "mypy",
  "pytest"
]

[tool.black]
force-exclude = '''
	/(
	| qclib
	)/
'''

[tool.isort]
skip = ["qclib"]

[tool.mypy]
exclude = "^(qclib/)"

[[tool.mypy.overrides]]
module = ["qiskit", "qiskit_aer", "qclib.*", "xyz"]
ignore_missing_imports = true

[tool.poetry.dependencies]
my-package = {path = "./qclib", develop = true}

[tool.setuptools.packages.find]
include = ["state_preparation*"]

[tool.pytest.ini_options]
testpaths = ["test"]  
norecursedirs = ["qclib"]
pythonpath = [
  "."
]

[tool.ruff]
exclude = ["qclib"]