[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "state_prep_benchmark"
version = "0.0.1"
dependencies = [
  "cirq",
  "prettytable",
  "fire",
  "qiskit==2.2.3",
  "qiskit_aer==0.17.2",
  "ply",
  "qiskit_aer",
  "black",
  "isort",
  "mypy",
  "pytest",
  "fire",
  "rich"
]

[tool.black]
force-exclude = '''
	/(
	| qclib
	| quantum-xyz
	)/
'''

[tool.isort]
skip = ["qclib", "quantum-xyz"]
profile = "black"

[tool.mypy]
exclude = "^(qclib/)"

[[tool.mypy.overrides]]
module = ["qiskit", "qiskit_aer", "qclib.*", "xyz"]
ignore_missing_imports = true

[tool.poetry.dependencies]
my-package = {path = "./qclib", develop = true}

[tool.setuptools.packages.find]
include = ["state_preparation*"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s | %(levelname)s | %(name)s | %(message)s"
testpaths = ["test"]  
norecursedirs = ["qclib", "quantum-xyz"]
pythonpath = [
  "."
]

[tool.ruff]
exclude = ["qclib", "quantum-xyz"]

[tool.ty.src]
exclude = ["qclib", "quantum-xyz"]

